update item page

--- a/item.html
+++ b/item.html
@@ -201,9 +201,9 @@ body {
 #pgraph {float:right}
 </style>
 <style>
-  body {
+  /* body {
 padding-top: 70px;
-}
+} */
 .btn-grey{
   background-color:#D8D8D8;
 color:#FFF;
@@ -271,12 +271,36 @@ font-size:13px;
         </div>
         <br>
 
+        <!-- Navigation -->
+<div class="topnav">
+  <a href="home.html">HOME</a>
+  <a href="item.html">ITEMS</a>
+  <a href="him.html" >HIM</a>
+  <a href="teen.html" >TEEN</a>
+   <a href="her.html" >HER</a>
+   <a href="kids.html" >KIDS</a>
+   <a href="baby.html">BABY</a>
+   <a href="occasion.html" >OCCASION</a>
+   <a href="offer.html" >OFFER</a>
+   <a href="contactUs.html" class="w3-button w3-bar-item">CONTACT US</a>
+ 
+ 
+  <div class="topnav-right">
+    <a href="#search">Search &nbsp <input type="text" placeholder=""></a>
+    <a href="about.html">About</a>
+  </div>
+</div>
+<br>
+
+<br>
+
 
     <div class="row">
 
 
 
-      <div class="col-md-3" style="background: red; height: 800px">
+      <!-- <div class="col-md-3" style="background: red; height: 800px"> -->
+        <div class="col-md-3">
         <ul class="list-unstyled" class="container">
           <li>Home</li>
           <li>Products
@@ -520,7 +544,8 @@ font-size:13px;
 </div>
 
       </div>
-      <div class="col-md-4" style="background: yellow; height: 800px"></div>
+      <!-- <div class="col-md-4" style="background: yellow; height: 800px"></div> -->
+      <div class="col-md-4"></div>
     </div>
 
 <br>
